simple constraints syntactic sugar

--- a/literature/literature.bib
+++ b/literature/literature.bib
@@ -632,6 +632,25 @@
   Timestamp                = {2014.11.07}
 }
 
+@TechReport{Schneider2009,
+  Title                    = {{OWL 2 Web Ontology Language RDF-Based Semantics}},
+  Author                   = {Schneider, Michael},
+  Institution              = {W3C},
+  Year                     = {2009},
+  Month                    = {October},
+  Type                     = {{W3C} Recommendation},
+
+  Added-at                 = {2011-12-12T19:00:57.000+0100},
+  Bibsource                = {http://w2.syronex.com/jmr/w3c-biblio},
+  Biburl                   = {http://www.bibsonomy.org/bibtex/2a04a2b5243d79beab714a0caa7750ceb/gergie},
+  Groups                   = {public},
+  Interhash                = {0ca86ce97135e60d6f2fa543e2a3b519},
+  Intrahash                = {a04a2b5243d79beab714a0caa7750ceb},
+  Timestamp                = {2011-12-12T19:00:57.000+0100},
+  Url                      = {\url{http://www.w3.org/TR/2009/REC-owl2-rdf-based-semantics-20091027/}},
+  Username                 = {gergie}
+}
+
 @Article{sirin2007pellet,
   Title                    = {{Pellet: A practical owl-dl reasoner}},
   Author                   = {Sirin, Evren and Parsia, Bijan and Grau, Bernardo Cuenca and Kalyanpur, Aditya and Katz, Yarden},
